--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     }
   ],
   "scripts": {
-    "test": "mocha"
+    "test": "tsc -p . && ./node_modules/mocha/bin/mocha build/test/test.js"
   },
   "main": "index.js",
   "repository": {
@@ -30,9 +30,13 @@
   },
   "devDependencies": {
     "@types/adm-zip": "^0.4.32",
+    "@types/chai": "^4.2.4",
+    "@types/chai-as-promised": "^7.1.2",
+    "@types/chai-things": "0.0.34",
+    "@types/mocha": "^5.2.7",
     "@types/moment-timezone": "^0.5.12",
     "@types/node": "^12.11.7",
-    "chai": "^4.1.0",
+    "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-things": "^0.2.0",
     "mocha": "^6.2.2"
